fix color backgrounds and contrast

--- a/style.css
+++ b/style.css
@@ -19,11 +19,6 @@ a:-webkit-any-link {
     color: #202124;
 }
 
-.Google-logo-container {
-    flex-shrink: 0;
-    box-sizing: border-box;
-}
-
 /* This is to make the main container to fill out all the space between the footer and itself. 
 This is what allows for the sticky footer. */
 div.main-container {
@@ -33,7 +28,7 @@ div.main-container {
 /* *** Top nav styling *** */
 /* Flex items defined for top links only */
 .top-nav-container {
-    background-color: red;
+    /* background-color: red; */
     display: flex;
     align-items: center;
     padding: 6px;
@@ -107,21 +102,14 @@ div.main-container {
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-.Google-logo-container{
-    background-color: beige;
     min-height: 92px;
-    max-height: 290px;
     flex-shrink: 0;
     box-sizing: border-box;
-    height: 229px;
-    /* height: calc(100%-560px) revise? */ 
-    
+    height: 150px;
 }
 
 .Google-logo-inner-container {
-    background-color: lightcoral;
+    /* background-color: lightcoral; */
     max-height: 92px;
     position: relative;
     height: 100%;
@@ -131,7 +119,7 @@ div.main-container {
 
 /* *** Search bar styling *** */
 .search-container {
-    background-color: rgb(255, 242, 127);
+    /* background-color: rgb(255, 242, 127); */
     padding: 20px;
     display: flex;
     flex-direction: column;
@@ -139,7 +127,7 @@ div.main-container {
 }
 
 .search-inner-container {
-    background-color: #8eaaff;
+    /* background-color: #8eaaff; */
     padding: 0;
     max-width: 584px;
     position: relative;
@@ -177,7 +165,7 @@ div.main-container {
 textarea.search-bar {
     font-family: Roboto,arial,sans-serif;
     line-height: 22px;
-    margin-bottom: 8px;
+    margin: 1% 0 8px 0;
     overflow-x: hidden;
     white-space: pre-line;
     overflow-y: auto;
@@ -186,6 +174,7 @@ textarea.search-bar {
     padding: 0;
     border: 0;
     height: 27px;
+    resize: none;
 }
 
 .lens-icon {
@@ -272,7 +261,7 @@ textarea.search-bar {
 }
 
 .footer-inner-container {
-    background-color: rgb(215, 231, 248);
+    /* background-color: rgb(215, 231, 248); */
     /* padding: 0 20px; */
     display: flex;
     flex-wrap: wrap;
@@ -289,10 +278,6 @@ textarea.search-bar {
     display: block;
     padding: 15px;
     white-space: nowrap;
-}
-
-a.footer-links {
-    color: #70757a;
 }
 
 .footer-links-left {
@@ -348,11 +333,12 @@ a:hover {
     text-underline-position: below;
 }
 
-.footer-links {
-    color: #70757a;
-}
-
 .nav-links {
     /* padding: 5px; */
     color: #202124;
+}
+
+a.footer-links {
+    /* color: #70757a; */
+    color: rgb(95, 89, 89)
 }
